--- a/multiprocess.ipynb
+++ b/multiprocess.ipynb
@@ -2,19 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Process\n",
+    "\n",
+    "# Create a new process\n",
+    "process = Process()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new process with a specified function to execute.\n",
+    "def example_function():\n",
+    "    pass\n",
+    "\n",
+    "new_process = Process(target=example_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new process with specific function to execute with args.\n",
+    "def example(args):\n",
+    "    pass\n",
+    "\n",
+    "process = Process(target=example, args=(\"Hi\",))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ahmad\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nTrue\\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('ahmad')"
+    "# Run the new process\n",
+    "process.start()\n",
+    "\n",
+    "# Check process is running\n",
+    "process.is_alive()\n",
+    "\n",
+    "\"\"\"\n",
+    "True\n",
+    "\"\"\""
    ]
   },
   {
